[gd_scene load_steps=9 format=3 uid="uid://dfdglmltorqae"]

[ext_resource type="Texture2D" uid="uid://bn6ytnv50ehkh" path="res://art/arrows.webp" id="1_2gc7i"]
[ext_resource type="Texture2D" uid="uid://c6yt48sk4bu50" path="res://art/button fixed.png" id="1_eipgy"]
[ext_resource type="Script" path="res://objects/key_listener.gd" id="2_lfl67"]
[ext_resource type="AudioStream" uid="uid://g0lh6ry3lccs" path="res://music/bubble-sound-43207_CrALlhdI.wav" id="5_4ve4m"]
[ext_resource type="AudioStream" uid="uid://cmmmmrdkrb3yk" path="res://music/near-miss-swing-whoosh-7-233431.wav" id="5_hutp1"]

[sub_resource type="Animation" id="Animation_bwb8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="Animation" id="Animation_7d07a"]
resource_name = "key_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7uvb"]
_data = {
"RESET": SubResource("Animation_bwb8k"),
"key_hit": SubResource("Animation_7d07a")
}

[node name="KeyListener" type="Sprite2D"]
texture = ExtResource("1_eipgy")
hframes = 4
vframes = 3
script = ExtResource("2_lfl67")

[node name="RandomSpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="GlowOverlay" type="Sprite2D" parent="."]
modulate = Color(1.3, 1.3, 1.3, 0)
texture = ExtResource("1_2gc7i")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l7uvb")
}

[node name="Near-miss-swing-whoosh-7-233431" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hutp1")
bus = &"sfx_menu"

[node name="Bubble-sound-43207CrALlhdI" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4ve4m")

[connection signal="timeout" from="RandomSpawnTimer" to="." method="_on_random_spawn_timer_timeout"]
